agrega botones al html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Campa: a Nelly.</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <div class = "buttons">
+        <button id = "rock">Rock</button>
+        <button id = "paper">Paper</button>
+        <button id = "scissors">Scissors</button>
+    </div>
+    <div class = "score">
+        
+    </div>
+    
 </body>
+<script src="script.js"></script>
 </html>
