--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <button id = "scissors">Scissors</button>
     </div>
     <div class = "score">
-        
+        <p id="human"></p>
+        <p id="machine"></p>
     </div>
     
 </body>
