quita los logs. Escribe resultados en pantalla. Desactiva los botones cuando uno de los dos llega a 5 puntos.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
         <button id = "paper">Paper</button>
         <button id = "scissors">Scissors</button>
     </div>
-    <div class = "score">
-        <p id="human"></p>
-        <p id="machine"></p>
-    </div>
+    <div id = "score"></div>
+    <div id="veredict"></div>
     
 </body>
 <script src="script.js"></script>
