--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class = "welcome">
         <h1>Greetings, Human.</h1>
-        <h2>Let's play 5 rounds of Rock, Paper, Scissors.</h2>
+        <h2>Let's play Rock, Paper, Scissors. First to reach 5 points wins.</h2>
         <h3>Choose:</h3>
     </div>
     <div class = "buttons">
@@ -18,7 +18,7 @@
         <button class="button-6" role="button" id="paper">paper</button>
         <button class="button-6" role="button" id="scissors">scissors</button>
     </div>
-    
+
     <div id = "score">
         <p id ="selections"></p>
         <p id ="partialScore"></p>
