agrega estilos.arregla lógica.agrega botón de refresh.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class = "welcome">
         <h1>Greetings, Human.</h1>
-        <h2>Let's play Rock, Paper, Scissors. First to reach 5 points wins.</h2>
+        <h2>Let's play Rock, Paper, Scissors. First to reach 3 points wins.</h2>
         <h3>Choose:</h3>
     </div>
     <div class = "buttons">
-        <button class="button-6" role="button" id="rock">rock</button>
-        <button class="button-6" role="button" id="paper">paper</button>
-        <button class="button-6" role="button" id="scissors">scissors</button>
+        <button class="button-6 play" role="button" id="rock">rock</button>
+        <button class="button-6 play" role="button" id="paper">paper</button>
+        <button class="button-6 play" role="button" id="scissors">scissors</button>
     </div>
 
     <div id = "score">
